[package]
name = "rats"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "~0.13", features = ["vulkan"] }
log = "~0.4"

[profile.release]
debug = true
lto = true

[profile.dev]
opt-level = 1
lto = false
